kuard-pod-resource.yml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers: 
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
    livenessProbe:
      httpGet:
        path: /healthy
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3
    resources:
      requests: # request specifies a minimum
        cpu: "500m"
        memory: "128Mi"
      limits: # limits specifies a maximum
        cpu: "1000m"
        memory: "256Mi"
